--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "스스로를 객관적으로 보도록 도와주는 앱",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon node index.js --delay 1.5"
   },
   "type": "module",
   "repository": {
@@ -18,6 +19,13 @@
   },
   "homepage": "https://github.com/MyNameIsTaeYeong/diary#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.0",
+    "mongoose": "^5.12.10",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
