--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "http-proxy-middleware": "^2.0.0",
     "mongoose": "^5.12.10",
     "nodemon": "^2.0.7",
